# lambda-benchmark

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/: main.ts
infra/config/: app-config-ts.json  devops-config-ts.json
infra/constructs/api-getways/: api-gateway.ts
infra/constructs/defaults/: constants.ts  default-api-gateway-props.ts  default-dynamodb-table-props.ts  default-lambda-function-props.ts
infra/constructs/eventbridge/: event-bus.ts
infra/constructs/functions/api/: api-function.ts
infra/constructs/functions/metrics-collector/: metrics-collector-function.ts
infra/constructs/functions/performance-test/: performance-test-function.ts
infra/constructs/state-machines/: performance-state-machine.ts
infra/constructs/tables/: stats-table.ts
infra/stacks/: app-stack.ts
next-app/: bun.lockb  next.config.js  package.json  stats.json
next-app/src/: env.js  types.ts
next-app/src/app/: layout.tsx  page.tsx
next-app/src/app/_components/: chart.tsx  stats-rsc.tsx  stats-skeleton.tsx
next-app/src/app/_lib/: get-stats.ts
next-app/src/components/ui/: badge.tsx  (+2 more)
next-app/src/styles/: globals.css
scripts/: cdk.sh  strip-schema.js
src/api/: stats-routes.ts  types.ts
src/api/lib/: get-deadline-params.ts
src/app/stats/: get-stats.ts
src/functions/api/: api-function.ts  service-name.ts
src/functions/metrics/: index.ts  service-name.ts  types.ts
src/functions/performance-benchmark/rust/: Cargo.toml  bootstrap  build.sh
src/functions/performance-benchmark/rust/src/: main.rs
(+11 files in other folders)
